Fixed footer button spacing

--- a/assets/sass/footer.scss
+++ b/assets/sass/footer.scss
@@ -5,8 +5,8 @@ footer.page-footer {
   text-align: center;
 
   a {
-    margin-left: 1em;
-    margin-right: 1em;
+    margin-left: 0.6em;
+    margin-right: 0.6em;
   }
 
   p {
